Skip to content

AudioTrack: fix deprecated usage of stream types (Android O)

04-21 13:39:23.662 15197  15630             AudioTrack  W  Use of stream types is deprecated for operations other than volume control
04-21 13:39:23.662 15197  15630             AudioTrack  W  See the documentation of AudioTrack() for what to use instead with android.media.AudioAttributes to qualify your playback use case

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information