aout: audiotrack: use new constructor

Fixes deprecated warning
Fixes #20324

Signed-off-by: Thomas Guillem <thomas@gllm.fr>